--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.35",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "^2.23.1",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.7.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-web": "~0.19.13",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
