--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.23.1",
+    "react-native-maps": "^1.20.1",
+    "react-native-permissions": "^5.2.6",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.7.0",
     "react-native-svg": "^15.11.1",
